--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SeverinosWork"
         tools:targetApi="31">
         <activity
+            android:name=".Conversion"
+            android:exported="false" />
+        <activity
+            android:name=".CalculateInk"
+            android:exported="false" />
+        <activity
             android:name=".Painting"
             android:exported="false" />
         <activity
