--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/tools_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/tools_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SeverinosWork"
         tools:targetApi="31">
@@ -22,13 +22,7 @@
             android:name=".Painting"
             android:exported="false" />
         <activity
-            android:name=".painting"
-            android:exported="false" />
-        <activity
             android:name=".Floor"
-            android:exported="false" />
-        <activity
-            android:name=".Construction"
             android:exported="false" />
         <activity
             android:name=".ChooseYourOption"
